<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/mapsFragment2"
        android:title="Campus"
        android:icon="@drawable/ic_baseline_location_city_24"/>
    <item
        android:id="@+id/locationAct"
        android:title="Location"
        android:icon="@drawable/ic_baseline_my_location_24"/>
    <item
        android:id="@+id/translateAct"
        android:title="Translate"
        android:icon="@drawable/ic_baseline_translate_24"/>
    <item
        android:id="@+id/profileFragment"
        android:title="MyProfile"
        android:icon="@drawable/ic_baseline_manage_accounts_24"/>
</menu>